adding request-promise, routes, database and update swagger
