# swagger.yaml
@@ -4,12 +4,118 @@ info:
   version: "0.0.0"
   title: "API template"
 host: "localhost:3000"
+basePath: "/api/v1"
 paths:
   /users:
     get:
       tags:
-        - "users"
-      summary: "It should send an user but send only a message"
+        - users
+      summary: Send a list of users
+      parameters:
+        - name: country
+          type: string
+          in: query
+          description: Country of the users
+        - name: company
+          type: string
+          in: query
+          description: Company of the users
       responses:
         200:
-          description: "User response"
+          description: List of filtered users according to the restrictions given via querystring
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/User"
+  /flights:
+    get:
+      tags:
+        - flights
+      summary: Returns a list of flights
+      parameters:
+        - name: origin
+          type: string
+          in: query
+          description: Code of the airport where the flight take off
+        - name: destination
+          type: string
+          in: query
+          description: Code of the airport where the flight will land
+      responses:
+        200:
+          description: List of filtered flights according to the restrictions given via querystring
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Flight"
+    post:
+      tags:
+        - flights
+      summary: Creates a flights
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/Flight"
+          description: Code of the airport where the flight take off
+      responses:
+        201:
+          description: Created flight
+          schema:
+            type: object
+            schema:
+              $ref: "#/definitions/Flight"
+definitions:
+  User:
+    type: object
+    properties:
+      username:
+        type: string
+      fullname:
+        type: string
+      country:
+        type: string
+      avatar:
+        type: string
+      company:
+        type: string
+      type:
+        type: string
+    example:
+      username: "@devonbl"
+      fullname: "Devon Lindsey"
+      country: "USA"
+      avatar: "https://pbs.twimg.com/profile_images/602288777319460866/QEZUObls_bigger.jpg"
+      company: "Apple"
+      type: "person"
+  Flight:
+    type: object
+    properties:
+      reference:
+        type: string
+        description: Identifier of the flight
+      origin:
+        type: string
+        description: Where the flight will take off
+      destination:
+        type: string
+        description: Where the flight will land
+      placesLeft:
+        type: number
+        description: Available seats on the plane
+      company:
+        type: string
+        description: Name of the company
+      price:
+        type: number
+      date:
+        type: string
+        format: date
+    example:
+      reference: 'AF-123'
+      origin: 'CDG'
+      destination: 'BOG'
+      date: '2018-03-06T10:32:31.175Z'
+      placesLeft: 30
+      price: 200
+      company: 'Air France'
